--- a/am-deploy/templates/deployment-archivematica-all.yml
+++ b/am-deploy/templates/deployment-archivematica-all.yml
@@ -31,7 +31,7 @@ spec:
         app.kubernetes.io/managed-by: helm
     spec:
       securityContext:
-        fsGroup: 1010690000
+        fsGroup: {{ .Values.general.user_uid }}
         fsGroupChangePolicy: "OnRootMismatch"
       serviceAccount: default
       serviceAccountName: default
@@ -39,8 +39,8 @@ spec:
         - image:  {{ .Values.archivematica_storage_service.image }}
           name: archivematica-storage-service
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}
           env:
             - name: SS_GUNICORN_BIND
               value: 0.0.0.0:8002
@@ -62,9 +62,9 @@ spec:
                   key: SS_DB_URL
                   name: env
             - name: SS_GUNICORN_USER
-              value: "1010690000"
+              value: {{ .Values.general.user_uid | quote }}
             - name: SS_GUNICORN_GROUP
-              value: "1010690000"
+              value: {{ .Values.general.user_uid | quote }}
             - name: SS_GUNICORN_LOGLEVEL
               value: "debug"
           ports:
@@ -88,8 +88,8 @@ spec:
         - image:  {{ .Values.archivematica_dashboard.image }}
           name: archivematica-dashboard 
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}
           env:
             - name: AM_GUNICORN_BIND 
               value: 0.0.0.0:8001
@@ -104,9 +104,9 @@ spec:
             - name: AM_GUNICORN_RELOAD_ENGINE
               value: auto
             - name: AM_GUNICORN_USER
-              value: "1010690000"
+              value: {{ .Values.general.user_uid | quote }}
             - name: AM_GUNICORN_GROUP
-              value: "1010690000"
+              value: {{ .Values.general.user_uid | quote }}
             - name: AM_GUNICORN_LOGLEVEL
               value: "debug"
             - name: AM_GUNICORN_WORKERS
@@ -145,8 +145,8 @@ spec:
         - image: {{ .Values.mcp_client.image }}
           name: archivematica-mcp-client
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}
           env:      
             - name: ARCHIVEMATICA_MCPCLIENT_MCPCLIENT_CAPTURE_CLIENT_SCRIPT_OUTPUT
               value: "true"           
@@ -216,8 +216,8 @@ spec:
         - image: {{ .Values.mcp_server.image }}
           name: archivematica-mcp-server
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000     
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}     
           env:            
             - name: DJANGO_SECRET_KEY
               value: "12345"
@@ -254,8 +254,8 @@ spec:
         - image: {{ .Values.clamvd.image }}
           name: clamavd
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}
           ports:
             - containerPort: 3310
           env:
@@ -289,16 +289,7 @@ spec:
               name: {{ .Release.Namespace }}-clamav-data
             - mountPath: /run
               name: {{ .Release.Namespace }}-clamav-log
-          {{- if .Values.freshclamConfig }}
-            - name: freshclam-config-volume
-              mountPath: /etc/clamav/freshclam.conf
-              subPath: freshclam.conf
-          {{- end }}
-          {{- if .Values.clamdConfig }}
-            - name: clamd-config-volume
-              mountPath: /etc/clamav/clamd.conf
-              subPath: clamd.conf
-          {{- end }}
+
 
 
         - image: artefactual/fits-ngserver:0.8.4
@@ -321,8 +312,8 @@ spec:
         - image:  {{ .Values.archivematica_storage_service.image }}
           name: archivematica-storage-service-migrations
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}
           command: ["sh"]
           args: ["-c","python /src/storage_service/manage.py migrate --noinput"]
           envFrom:
@@ -370,8 +361,8 @@ spec:
         - image:  {{ .Values.archivematica_storage_service.image }}
           name: archivematica-storage-service-create-user
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }}
           envFrom:
             - secretRef:
                 name: archivematica-settings
@@ -439,8 +430,8 @@ spec:
         - image:  {{ .Values.archivematica_dashboard.image }}
           name: archivematica-dashboard-migration  
           securityContext:
-            runAsUser: 1010690000
-            runAsGroup: 1010690000 
+            runAsUser: {{ .Values.general.user_uid }}
+            runAsGroup: {{ .Values.general.user_uid }} 
           command: ["sh"]
           args: ["-c", "python /src/dashboard/src/manage.py migrate --noinput"]
           envFrom:
@@ -505,13 +496,6 @@ spec:
           {{- if .Values.archivematica_storage_service.persistence.enabled }}
           persistentVolumeClaim:
             claimName: storage-share
-          {{- else }}
-          emptyDir: {}
-          {{- end }}
-        - name: {{ .Release.Namespace }}-clamav-etc
-          {{- if .Values.clamvd.persistence.enabled }}
-          persistentVolumeClaim:
-            claimName: clamav-etc
           {{- else }}
           emptyDir: {}
           {{- end }}
@@ -825,24 +809,6 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: clamav-log
-  annotations:
-    "helm.sh/resource-policy": keep
-spec:
-  accessModes:
-    - ReadWriteOnce
-    - ReadWriteMany
-    - ReadOnlyMany
-  resources:
-    requests:
-      storage: {{ .Values.archivematica_storage_service.persistence.size }}
-  storageClassName: cephfs-ssd
-{{- end }}
----
-{{- if .Values.archivematica_storage_service.persistence.enabled }}
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: clamav-etc
   annotations:
     "helm.sh/resource-policy": keep
 spec:
