--- a/am-deploy/templates/env.yaml
+++ b/am-deploy/templates/env.yaml
@@ -15,12 +15,12 @@ data:
   AM_DASHBOARD_ORG_NAME: CERN
   AM_DASHBOARD_ORG_ID: TESTid
   AM_DASHBOARD_API_KEY: e392
-  AM_SS_URL: "http://am-deploy2.web.cern.ch"
+  AM_SS_URL: "http://dm-am-test2.web.cern.ch"
   AM_SS_USERNAME: demo
   AM_SS_PASSWORD: demo
   AM_SS_API_KEY: e6282adabed84e39ffe451f8bf6ff1a67c1fc9f2
   AM_SS_EMAIL: demo@cern.ch
-  AM_DASHBOARD_SITE_URL: "http://am-deploy.web.cern.ch"
+  AM_DASHBOARD_SITE_URL: "http://dm-am-test.web.cern.ch"
   CLAMAV_MAX_FILE_SIZE: "2048"
   CLAMAV_MAX_SCAN_SIZE: "2048"
   CLAMAV_MAX_STREAM_LENGTH: "2048"
