Replace some values with variables

--- a/am-deploy/templates/deployment-archivematica-all.yml
+++ b/am-deploy/templates/deployment-archivematica-all.yml
@@ -654,10 +654,10 @@ metadata:
 spec:  
   tls:
   - hosts:
-    - "am-deploy.web.cern.ch"
+    - {{ .Values.route.hostname }}
     secretName: archivematica-dashboard
   rules:
-  - host: "am-deploy.web.cern.ch"
+  - host: {{ .Values.route.hostname }}
     http:
       paths:           
       - path: /
