Add route for the Storage Service

--- a/am-deploy/templates/route.yml
+++ b/am-deploy/templates/route.yml
@@ -1,4 +1,26 @@
 {{- if .Values.route.enabled }}
+
+
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: am-route-ss
+spec:
+  host: {{ .Values.route.hostname_ss }}
+  to:
+    kind: Service
+    name: archivematica-storage-service
+    weight: 1
+  port:
+    targetPort: 8002
+  {{- if .Values.route.tls }}
+  tls:
+    insecureEdgeTerminationPolicy: Redirect
+    termination: edge
+  {{- end }}
+status:
+    ingress: []
+---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
@@ -18,4 +40,5 @@ spec:
   {{- end }}
 status:
     ingress: []
+
 {{- end }}
