--- a/am-deploy/templates/env.yaml
+++ b/am-deploy/templates/env.yaml
@@ -15,7 +15,7 @@ data:
   AM_DASHBOARD_ORG_NAME: CERN
   AM_DASHBOARD_ORG_ID: TESTid
   AM_DASHBOARD_API_KEY: e392
-  AM_SS_URL: {{ .Values.route.ss-hostname }}
+  AM_SS_URL: {{ .Values.route.hostname_ss }}
   AM_SS_USERNAME: demo
   AM_SS_PASSWORD: demo
   AM_SS_API_KEY: e6282adabed84e39ffe451f8bf6ff1a67c1fc9f2
